--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Word Generator</title>
-  <link rel="stylesheet" href="styles.css?v=9">
+  <link rel="stylesheet" href="styles.css?v=10">
 </head>
 <body>
   <div class="wrap">
@@ -16,14 +16,15 @@
         </div>
       </div>
 
-      <div id="topicDropdown" class="dropdown" data-default="all"></div>
-
-      <button id="btn" class="btn">⚡ Generate</button>
-      <button id="themeToggle" class="btn" aria-label="Toggle light/dark theme">☀️ Light</button>
+      <div class="toolbar">
+        <div id="topicDropdown" class="dropdown" data-default="all"></div>
+        <button id="btn" class="btn">⚡ Generate</button>
+        <button id="themeToggle" class="btn" aria-label="Toggle light/dark theme">🌙 Dark</button>
+      </div>
     </div>
 
     <div id="list" class="list" aria-live="polite" aria-busy="false"></div>
   </div>
-  <script src="script.js?v=9"></script>
+  <script src="script.js?v=10"></script>
 </body>
 </html>
