--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Word Generator</title>
-  <link rel="stylesheet" href="styles.css?v=10">
+  <link rel="stylesheet" href="styles.css?v=11">
 </head>
 <body>
   <div class="wrap">
@@ -17,6 +17,11 @@
       </div>
 
       <div class="toolbar">
+        <label class="toggle" title="Ignore the level slider">
+          <input id="anyLevel" type="checkbox" />
+          <span>Any level</span>
+        </label>
+
         <div id="topicDropdown" class="dropdown" data-default="all"></div>
         <button id="btn" class="btn">⚡ Generate</button>
         <button id="themeToggle" class="btn" aria-label="Toggle light/dark theme">🌙 Dark</button>
@@ -25,6 +30,6 @@
 
     <div id="list" class="list" aria-live="polite" aria-busy="false"></div>
   </div>
-  <script src="script.js?v=10"></script>
+  <script src="script.js?v=11"></script>
 </body>
 </html>
