--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Word Generator</title>
-  <link rel="stylesheet" href="styles.css?v=17">
+  <link rel="stylesheet" href="styles.css?v=18">
 </head>
 <body>
   <div class="wrap">
     <div class="controls">
       <div class="level-picker">
-        <div class="level-row">
-          <input type="range" id="level" min="0" max="5" step="1" value="0" aria-label="Select CEFR level A1 to C2">
-          <label class="toggle level-toggle" title="Ignore the level slider">
-            <input id="anyLevel" type="checkbox" aria-controls="level" />
-            <span>All levels</span>
-          </label>
-        </div>
+        <input class="level" type="range" id="level" min="0" max="5" step="1" value="0" aria-label="Select CEFR level A1 to C2">
+        <label class="toggle level-toggle" title="Ignore the level slider">
+          <input id="anyLevel" type="checkbox" aria-controls="level" />
+          <span>All levels</span>
+        </label>
         <div class="marks" aria-hidden="true">
           <span>A1</span><span>A2</span><span>B1</span><span>B2</span><span>C1</span><span>C2</span>
         </div>
@@ -31,6 +29,6 @@
 
     <div id="list" class="list" aria-live="polite" aria-busy="false"></div>
   </div>
-  <script src="script.js?v=17"></script>
+  <script src="script.js?v=18"></script>
 </body>
 </html>
